# pyLDM

./: .gitignore  .travis.yml  README.md  environment.yml  license.txt  pyproject.toml  release.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  codeql.yml
examples/: simple.py
pyldm/: __init__.py  ldmbridge.py
pyldm/tests/: test_ldmbridge.py
src/pyldm/: __init__.py  ldmbridge.py
src/pyldm/tests/: test_ldmbridge.py
testdata/: nwwsoi_example.txt  threeNIDS.txt  twoprods.txt
tests/: test_ldmbridge.py
