[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
description = "Ancient twisted based pqact LDM bridge."
dynamic = ["version"]
keywords = ["meteorology"]
license = {text = "Apache"}
readme = "README.md"
name = "pyldm"

[project.urls]
"homepage" = "https://github.com/akrherz/pyLDM"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "ERA", # commented out code
    "F",
    "I",
]

[tool.setuptools_scm]
version_scheme = "post-release"
