[metadata]
name = pyLDM
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/pyLDM
keywords = meteorology
license = Apache
license-file = LICENSE
description = Twisted bridge to LDM pqact PIPE.
description-file = README.md

[pep8]
ignore = W503

[options]
include_package_data = False
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src

